src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Activity_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carelink_Name__c</fullName>
        <label>Carelink Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlled_by_Price_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controlled by Price Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDIS_Portal_Name__c</fullName>
        <formula>Category__r.NDIS_Portal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDIS Portal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDIS_Support_Number__c</fullName>
        <label>NDIS Support Number</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NDIA - ACT</fullName>
                </value>
                <value>
                    <fullName>NDIA - NSW</fullName>
                </value>
                <value>
                    <fullName>NDIA - QLD</fullName>
                </value>
                <value>
                    <fullName>NDIA - VIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>